changed margin to padding in sections to avoid margin collapse

--- a/assets/css/style-landing.css
+++ b/assets/css/style-landing.css
@@ -271,8 +271,8 @@ body a {
   font-size: 38px;
 }
 
-.section-margin {
-  margin: 80px 0;
+.section-padding {
+  padding: 80px 0;
 }
 
 .d-grid-4 {
